recursion.logo.spiral.Spiral.scala.error
Compilation error:
Spiral:2: error: reassignment to val
  if (steps = 0) return null
            ^Spiral:2: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  if (steps = 0) return null
                        ^Spiral:2: warning: enclosing method spiral has result type Unit: return value discarded
  if (steps = 0) return null
                 ^